core/include/relinow_state.h

#ifndef RELINOW_STATE_H
#define RELINOW_STATE_H

#include <stddef.h>
#include <stdint.h>

#include "relinow_packet.h"
#include "relinow_reliable.h"

#define RELINOW_MAX_PEERS 20u
#define RELINOW_MAX_CHANNELS_PER_PEER 16u
#define RELINOW_TX_QUEUE_SIZE 16u
#define RELINOW_RX_QUEUE_SIZE 8u

typedef enum {
    RELINOW_STATE_OK = 0,
    RELINOW_STATE_ERR_INVALID_ARG = 1,
    RELINOW_STATE_ERR_NOT_FOUND = 2,
    RELINOW_STATE_ERR_NO_SPACE = 3,
    RELINOW_STATE_ERR_CONFLICT = 4,
    RELINOW_STATE_ERR_QUEUE_FULL = 5,
    RELINOW_STATE_ERR_WRONG_MODE = 6
} relinow_state_err_t;

typedef struct {
    uint8_t used;
    uint16_t seq_id;
} relinow_tx_slot_t;

typedef struct {
    uint8_t used;
    uint16_t seq_id;
} relinow_rx_slot_t;

typedef struct {
    uint32_t total_rx;
    uint32_t total_lost;
} relinow_stats_t;

typedef struct {
    uint8_t in_use;
    uint8_t channel_id;
    uint8_t mode;
    uint8_t priority;
    uint16_t next_tx_seq;
    uint16_t expected_rx_seq;
    uint8_t has_rx_seq;
    uint8_t has_inflight;
    uint16_t inflight_seq;
    relinow_stats_t stats;
    relinow_reliable_ctx_t reliable;
    relinow_tx_slot_t tx_queue[RELINOW_TX_QUEUE_SIZE];
    relinow_rx_slot_t rx_queue[RELINOW_RX_QUEUE_SIZE];
} relinow_channel_state_t;

typedef struct {
    uint8_t in_use;
    uint8_t mac[6];
    uint16_t heartbeat_interval_ms;
    uint8_t heartbeat_miss_count_max;
    uint32_t last_ping_sent_ms;
    uint8_t missed_pongs;
    relinow_channel_state_t channels[RELINOW_MAX_CHANNELS_PER_PEER];
} relinow_peer_state_t;

typedef struct {
    relinow_peer_state_t peers[RELINOW_MAX_PEERS];
} relinow_state_t;

typedef struct {
    uint16_t max_peers;
    uint16_t max_channels_per_peer;
    uint16_t tx_queue_size;
    uint16_t rx_queue_size;
    size_t state_footprint_bytes;
} relinow_state_limits_t;

void relinow_state_init(relinow_state_t* state);

void relinow_state_get_limits(relinow_state_limits_t* out_limits);

relinow_state_err_t relinow_state_add_peer(
    relinow_state_t* state,
    const uint8_t mac[6],
    uint8_t* out_peer_index
);

relinow_state_err_t relinow_state_find_peer(
    const relinow_state_t* state,
    const uint8_t mac[6],
    uint8_t* out_peer_index
);

relinow_state_err_t relinow_state_open_channel(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint8_t mode,
    uint8_t priority
);

relinow_state_err_t relinow_state_next_sequence(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t* out_seq
);

relinow_state_err_t relinow_state_get_channel_mode(
    const relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint8_t* out_mode
);

relinow_state_err_t relinow_state_mark_inflight(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t seq_id
);

relinow_state_err_t relinow_state_clear_inflight(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t seq_id
);

relinow_state_err_t relinow_state_enqueue_tx(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t seq_id
);

relinow_state_err_t relinow_state_enqueue_rx(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t seq_id
);

relinow_state_err_t relinow_state_set_reliable_config(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    const relinow_reliable_config_t* cfg
);

relinow_state_err_t relinow_state_reliable_send(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint32_t now_ms,
    relinow_reliable_tx_result_t* out_result
);

relinow_state_err_t relinow_state_reliable_on_ack(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t ack_id,
    uint32_t now_ms
);

relinow_state_err_t relinow_state_reliable_poll(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint32_t now_ms,
    relinow_reliable_tx_result_t* out_result
);

relinow_state_err_t relinow_state_reliable_on_data(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t seq_id,
    relinow_reliable_rx_result_t* out_result
);

relinow_state_err_t relinow_state_reliable_get_rtt_ms(
    const relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t* out_rtt_ms
);

relinow_state_err_t relinow_state_unreliable_send(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t* out_seq_id
);

relinow_state_err_t relinow_state_unreliable_on_data(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t seq_id
);

relinow_state_err_t relinow_state_priority_send(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t* out_seq_id,
    uint8_t* out_replaced,
    uint16_t* out_replaced_seq_id
);

relinow_state_err_t relinow_state_priority_on_data(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    uint16_t seq_id,
    uint8_t* out_should_deliver
);

relinow_state_err_t relinow_state_clear_inflight_any(
    relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id
);

relinow_state_err_t relinow_state_configure_heartbeat(
    relinow_state_t* state,
    uint8_t peer_index,
    uint16_t interval_ms,
    uint8_t miss_count_max
);

relinow_state_err_t relinow_state_poll_heartbeat(
    relinow_state_t* state,
    uint8_t peer_index,
    uint32_t now_ms,
    uint8_t* out_should_ping,
    uint8_t* out_peer_timeout
);

relinow_state_err_t relinow_state_on_pong(
    relinow_state_t* state,
    uint8_t peer_index
);

relinow_state_err_t relinow_state_get_stats(
    const relinow_state_t* state,
    uint8_t peer_index,
    uint8_t channel_id,
    relinow_stats_t* out_stats
);

relinow_state_err_t relinow_state_scheduler_next(
    relinow_state_t* state,
    uint8_t peer_index,
    uint32_t now_ms,
    uint8_t* out_channel_id,
    relinow_reliable_tx_result_t* out_tx
);

#endif